--- a/style.css
+++ b/style.css
@@ -3,10 +3,17 @@ html,
 body {
   width: 100%;
   height: 100%;
+  margin: 0; /* Ensure no default margin */
+  padding: 0;
 }
 
+/* Pinkish background with 🎀 emoji repeated */
 body {
-  background: #252432;
+  background-color: #ffc0cb; /* light pink */
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40'%3E%3Ctext y='32' font-size='32'%3E%E2%9C%80%3C/text%3E%3C/svg%3E");
+  background-repeat: repeat;
+  background-position: center;
+  background-size: 40px 40px;
 }
 
 #cake {
@@ -120,8 +127,10 @@ body {
     transform: translateY(0);
   }
 }
+
+/* Change text color to black */
 .text {
-  color: #d1d1d1;
+  color: black;
   font-family: "Lato", sans-serif;
   font-weight: 300;
   font-style: italic;
