--- a/style.css
+++ b/style.css
@@ -1,19 +1,13 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:300italic);
+
 html,
 body {
   width: 100%;
   height: 100%;
-  margin: 0; /* Ensure no default margin */
-  padding: 0;
 }
 
-/* Pinkish background with 🎀 emoji repeated */
 body {
-  background-color: #ffc0cb; /* light pink */
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40'%3E%3Ctext y='32' font-size='32'%3E%E2%9C%80%3C/text%3E%3C/svg%3E");
-  background-repeat: repeat;
-  background-position: center;
-  background-size: 40px 40px;
+  background: #FFC0CB; /* Changed to a pinkish color */
 }
 
 #cake {
@@ -105,6 +99,7 @@ body {
     transform: translateY(-20px) scale(0);
   }
 }
+
 @keyframes fire {
   0%, 100% {
     background: rgba(254, 248, 97, 0.5);
@@ -117,25 +112,27 @@ body {
     transform: translateY(-20px) scale(0);
   }
 }
+
 @-webkit-keyframes in {
   to {
     transform: translateY(0);
   }
 }
+
 @keyframes in {
   to {
     transform: translateY(0);
   }
 }
 
-/* Change text color to black */
 .text {
-  color: black;
+  color: #000000; /* Changed to black */
   font-family: "Lato", sans-serif;
   font-weight: 300;
   font-style: italic;
   text-align: center;
 }
+
 .text h1 {
   font-size: 1.4em;
 }
