--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:300italic);
-
 html,
 body {
   width: 100%;
@@ -7,7 +6,7 @@ body {
 }
 
 body {
-  background: #FFC0CB; /* Changed to a pinkish color */
+  background: #252432;
 }
 
 #cake {
@@ -99,7 +98,6 @@ body {
     transform: translateY(-20px) scale(0);
   }
 }
-
 @keyframes fire {
   0%, 100% {
     background: rgba(254, 248, 97, 0.5);
@@ -112,27 +110,23 @@ body {
     transform: translateY(-20px) scale(0);
   }
 }
-
 @-webkit-keyframes in {
   to {
     transform: translateY(0);
   }
 }
-
 @keyframes in {
   to {
     transform: translateY(0);
   }
 }
-
 .text {
-  color: #000000; /* Changed to black */
+  color: #d1d1d1;
   font-family: "Lato", sans-serif;
   font-weight: 300;
   font-style: italic;
   text-align: center;
 }
-
 .text h1 {
   font-size: 1.4em;
 }
